turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/pass/sub-suffix-sep.ts
import { subSuffixSep } from "@/sub";
console.log(subSuffixSep);
