turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/fail/sub-prefix-sep.ts
import { subPrefixSep } from "sub/@";
console.log(subPrefixSep);
